--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" role="main">
     <div class="card">
       <div class="top-bg">
       </div>
     <div class="info">
-      <h2>Order Summary</h2>
+      <h1>Order Summary</h1>
 
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
       
@@ -42,10 +42,11 @@
       <button class="cancel">Cancel Order</button>
     </div>
     </div>
-    <div class="attribution">
+
+    <div class="attribution" role="contentinfo">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/mdagudo">María Agudo</a>.
     </div>
-  
+  </div>
 </body>
 </html>
